--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <iframe src="./iframe.html" onload="getIFrameReference()" id="my-iframe" frameborder="1" width="520"
+    <iframe src="./iframe.html" onload="initIFrameReference()" id="my-iframe" frameborder="1" width="520"
       height="400"></iframe>
   </div>
 
